# pot_pourri

./: .gitignore  README.md  live_plot_csv.py
shell/: CMakeLists.txt  auto.py  ps1_shortener.c  ps1_shortener.cpp  ps1_shortener.py  test_ps1_shortener.py
shell/include/: debug_essentials.h
